--- a/app/src/main/res/layout/fragment_bienvenida.xml
+++ b/app/src/main/res/layout/fragment_bienvenida.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/fondo"
+    android:background="@drawable/fondo2"
     tools:context=".ui.fragment.Bienvenida">
 
     <!-- TODO: Update blank fragment layout -->
@@ -14,6 +14,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Gmemory"
+        android:textColor="@color/white"
         android:textSize="34sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -22,26 +23,27 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.043" />
+
     <Button
         android:id="@+id/btn_empezar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Comenzar"
+        android:layout_marginBottom="16dp"
+        android:text="@string/comenzar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.499"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
-        app:layout_constraintVertical_bias="0.897" />
+        app:layout_constraintHorizontal_bias="0.973"
+
+        app:layout_constraintStart_toStartOf="parent" />
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginBottom="16dp"
         android:orientation="horizontal"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
 
         <ImageView
             android:id="@+id/btn_telegram"
@@ -49,6 +51,7 @@
             android:layout_height="30dp"
             android:layout_marginStart="16dp"
             android:layout_marginBottom="16dp"
+            app:tint="@color/white"
             android:src="@drawable/ic__20_telegram"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
@@ -60,6 +63,7 @@
             android:layout_marginStart="20dp"
             android:layout_marginBottom="16dp"
             android:src="@drawable/ic__04_twitter"
+            app:tint="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@+id/btn_telegram" />
 
@@ -70,6 +74,7 @@
             android:layout_marginStart="20dp"
             android:layout_marginBottom="16dp"
             android:src="@drawable/ic__27_whatsapp"
+            app:tint="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@+id/btnt_witter" />
 
@@ -80,6 +85,7 @@
             android:layout_marginStart="20dp"
             android:layout_marginBottom="16dp"
             android:src="@drawable/ic__43_email"
+            app:tint="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@+id/btn_whatsapp" />
     </LinearLayout>
