--- a/app/src/main/res/layout/fragment_opciones_juego.xml
+++ b/app/src/main/res/layout/fragment_opciones_juego.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@drawable/fondo"
+    android:background="@drawable/fondo2"
     tools:context=".ui.fragment.OpcionesJuego">
 
     <LinearLayout
@@ -50,6 +50,34 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:drawableRight="@drawable/ic_baseline_arrow_forward_24"
-        android:text="Jugar" />
+        android:text="@string/game" />
+
+    <LinearLayout
+        android:id="@+id/btn_back"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="60dp"
+        android:gravity="center"
+        android:orientation="horizontal"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageButton
+            android:id="@+id/imageButton"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:background="@drawable/button_accent"
+            android:rotation="180"
+            android:src="@drawable/ic_baseline_arrow_forward_24" />
+
+        <TextView
+            android:id="@+id/textView5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
+            android:textColor="@color/white"
+            android:text="@string/home" />
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
